Adopt spring security