@@ -1,15 +1,9 @@
 package com.sap.cloudfoundry.client.facade.rest;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URL;
-import java.text.MessageFormat;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
 import org.cloudfoundry.client.CloudFoundryClient;
@@ -21,8 +15,6 @@ import org.springframework.web.reactive.function.client.ExchangeFilterFunction;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClient.Builder;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sap.cloudfoundry.client.facade.CloudCredentials;
 import com.sap.cloudfoundry.client.facade.adapters.CloudFoundryClientFactory;
 import com.sap.cloudfoundry.client.facade.adapters.ImmutableCloudFoundryClientFactory;
@@ -33,8 +25,6 @@ import com.sap.cloudfoundry.client.facade.util.RestUtil;
 @Value.Immutable
 public abstract class CloudControllerRestClientFactory {
 
-    private final Map<URL, Map<String, Object>> infoCache = new HashMap<>();
-    private final ObjectMapper objectMapper = new ObjectMapper();
     private final RestUtil restUtil = new RestUtil();
 
     public abstract Optional<Duration> getSslHandshakeTimeout();
@@ -61,10 +51,6 @@ public abstract class CloudControllerRestClientFactory {
         getThreadPoolSize().ifPresent(builder::threadPoolSize);
         getResponseTimeout().ifPresent(builder::responseTimeout);
         return builder.build();
-    }
-
-    public WebClient getGeneralPurposeWebClient() {
-        return restUtil.createWebClient(shouldTrustSelfSignedCertificates());
     }
 
     public CloudControllerRestClient createClient(URL controllerUrl, CloudCredentials credentials, String organizationName,
@@ -94,49 +80,18 @@ public abstract class CloudControllerRestClientFactory {
     }
 
     private OAuthClient createOAuthClient(URL controllerUrl, String origin) {
-        Map<String, Object> infoMap = getInfoMap(controllerUrl);
-        URL authorizationEndpoint = getAuthorizationEndpoint(infoMap);
         if (StringUtils.isEmpty(origin)) {
-            return restUtil.createOAuthClient(authorizationEndpoint);
+            return restUtil.createOAuthClientByControllerUrl(controllerUrl, shouldTrustSelfSignedCertificates());
         }
         ConnectionContext connectionContext = getCloudFoundryClientFactory().getOrCreateConnectionContext(controllerUrl.getHost());
-        return restUtil.createOAuthClient(authorizationEndpoint, connectionContext, origin);
-    }
-
-    private Map<String, Object> getInfoMap(URL controllerUrl) {
-        if (infoCache.containsKey(controllerUrl)) {
-            return infoCache.get(controllerUrl);
-        }
-
-        String infoResponse = getGeneralPurposeWebClient().get()
-                                                          .uri(controllerUrl + "/v2/info")
-                                                          .retrieve()
-                                                          .bodyToMono(String.class)
-                                                          .block();
-        try {
-            return objectMapper.readValue(infoResponse, new TypeReference<Map<String, Object>>() {
-            });
-        } catch (IOException e) {
-            throw new IllegalArgumentException("Error getting /v2/info from cloud controller.", e);
-        }
-    }
-
-    private URL getAuthorizationEndpoint(Map<String, Object> infoMap) {
-        String authorizationEndpoint = (String) infoMap.get("authorization_endpoint");
-        try {
-            return new URL(authorizationEndpoint);
-        } catch (MalformedURLException e) {
-            throw new IllegalArgumentException(MessageFormat.format("Error creating authorization endpoint URL for endpoint {0}.",
-                                                                    authorizationEndpoint),
-                                               e);
-        }
+        return restUtil.createOAuthClient(controllerUrl, connectionContext, origin, shouldTrustSelfSignedCertificates());
     }
 
     private WebClient createWebClient(CloudCredentials credentials, OAuthClient oAuthClient, List<ExchangeFilterFunction> exchangeFilters) {
         Builder webClientBuilder = restUtil.createWebClient(shouldTrustSelfSignedCertificates())
                                            .mutate();
         oAuthClient.init(credentials);
-        addExchangeFilters(webClientBuilder, Arrays.asList(new CloudControllerRestClientRequestFilterFunction(oAuthClient)));
+        addExchangeFilters(webClientBuilder, List.of(new CloudControllerRestClientRequestFilterFunction(oAuthClient)));
         addExchangeFilters(webClientBuilder, exchangeFilters);
         return webClientBuilder.build();
     }
